# hello-rust

./: Cargo.toml  README.md  index.js  merged.ts  my_database.db  sample.txt
benches/: my_benchmark.rs
src/: main.rs
