[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ferris-says = "0.3.2"
rand = "0.8.5"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
